로그인 화면 html, css 완성(js 구현 예정)

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인 페이지</title>
-    <link rel="stylesheet" href="/login/css/asdfa.css">
+    <link rel="stylesheet" href="/login/css/login.css">
 </head>
 <body>
     <div id="wrapper">
@@ -15,7 +15,7 @@
                 </div>
                 <h1 class="title_box"><span class="title">노원구청<em>통합로그인</em></span></h1>
                 <div class="desc_box">
-                    <p><span>성북구청 홈페이지에 방문해주신 여러분을 환영합니다.</span><br/>
+                    <p><span>노원구청 홈페이지에 방문해주신 여러분을 환영합니다.</span><br/>
                     <em class="em_sky">회원가입 및 로그인</em>을 하시면 회원님들에게 제공되는 신청, 접수 등 다양한 콘텐츠를 이용하실 수 있습니다. <br>
                     회원가입을 하지 않고 휴대폰본인인증, 아이핀인증을 하는 경우 <em class="em_sky">게시판 글쓰기 등으로 이용이 제한</em>됩니다.</p>
                     <span><span class="skip">안내사항</span> 정보통신망 이용촉진 및 정보보호 등에 관한 법률 제44조의5(게시판 이용자의 본인 확인) 및 전자정부법 시행령 제12조(민원인 등의 본인 확인)</span>
