마이페이지 (신문고, 간편서류, 내 정보 수정)

--- a/src/main/resources/templates/mypage_sinmungo.html
+++ b/src/main/resources/templates/mypage_sinmungo.html
@@ -5,25 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마이페이지</title>
-    <link rel="stylesheet" href="/mypage/css/mypage.css">
+    <link rel="stylesheet" href="/mypage/css/mypage_sinmungo.css">
 </head>
 
 <body>
     <div id="container">
         <article id="content">
             <div class="content-header">
-                <h2 class="content-title">나의 민원</h2>
+                <h2 class="content-title">신문고</h2>
             </div>
             <div class="content-body" id="printArea">
-                <nav class="main-tab">
-                    <ul class="tab-list">
-                        <!-- 선택 하면 class on, title 선택됨이 옮겨짐 토글? -->
-                        <li class="on">
-                            <a href="" title="선택됨"><span>통합민원</span></a>
-                        </li>
-                        <li><a href=""><span>간편서류</span></a></li>
-                    </ul>
-                </nav>
                 <form class="bbs-search" id="dataForm" name="dataForm" action="">
                     <input type="hidden" name="q_cvplSn" id="q_cvplSn" value="">
                     <input type="hidden" id="q_cvplCtgryCode" name="q_cvplCtgryCode" value="">
