--- a/src/main/resources/static/mypage/css/mypage_simpleDoc.css
+++ b/src/main/resources/static/mypage/css/mypage_simpleDoc.css
@@ -14,66 +14,26 @@ ul {
     max-width: 1170px;
 }
 
-/* 탭 */
-.main-tab {
-  margin-bottom: 20px;
-  padding-right: 40px;
-  /* border-bottom: 1px solid #ccc; */
-}
-.main-tab .tab-list {
-  display: flex;
-}
-.main-tab .tab-list li {
-  flex: 1;
-  text-align: center;
-}
-.main-tab .tab-list li a {
-  display: block;
-  padding: 12px 0;
-  font-size: 15px;
-  color: #333;
-  border: 1px solid #ccc;
-  /* border-bottom: none; */
-  background: #fff;
-  text-decoration-line: none;
-}
-.tab-list li a span {
-    display: table-cell;
-    width: 1%;
-    height: 0.5rem;
-    vertical-align: middle;
-}
-.tab-list li a {
-    display: block;
-    width: 100%;
-}
-.main-tab .tab-list li.on a {
-  background: #2c53b0;
-  color: #fff;
-  font-weight: 600;
-  border-color: #2c53b0;
-}
-
 fieldset {
-    display: flex;
-    min-inline-size: min-content;
-    margin-inline: 2px;
-    border-width: 2px;
-    border-style: groove;
-    border-color: threedface;
-    border-image: initial;
-    padding: 14px;
+  display: flex;
+  min-inline-size: min-content;
+  margin-inline: 2px;
+  border-width: 2px;
+  border-style: groove;
+  border-color: threedface;
+  border-image: initial;
+  padding: 14px;
 }
 /* 검색 박스 */
 .bbs-search {
-    background-color: rgb(251, 251, 251);
-    margin-bottom: 0.3rem;
-    font-size: 0px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(235, 235, 235);
-    border-image: initial;
-    padding: 0.14rem;
+  background-color: rgb(251, 251, 251);
+  margin-bottom: 0.3rem;
+  font-size: 0px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(235, 235, 235);
+  border-image: initial;
+  padding: 0.14rem;
 }
 .bbs-search .input-area {
   flex: 1;
@@ -82,10 +42,10 @@ fieldset {
   gap: 8px;
 }
 .bbs-search .input-area .form-control + .form-control {
-    margin-left: 9px;
+  margin-left: 9px;
 }
 .select-length2 .form-control-keyword {
-    width: calc(100% - 318px) !important;
+  width: calc(100% - 318px) !important;
 }
 
 .bbs-search .form-control {
@@ -111,13 +71,13 @@ fieldset {
   line-height: 5px;
 }
 .btn-primary {
-  background-color: #2c53b0;
+  background-color: #5942d0;
   color: #fff;
 }
 .btn-outline-light {
   background-color: #fff;
   border-color: #ccc;
-  color: #2c53b0;
+  color: #5942d0;
 }
 
 /* 리스트 정보 */
@@ -126,7 +86,7 @@ fieldset {
   font-size: 14px;
 }
 .list-info .total strong {
-  color: #2c53b0;
+  color: #5942d0;
 }
 
 /* 테이블 */
@@ -145,7 +105,7 @@ fieldset {
 .table thead th {
   background-color: #f8f9fa;
   font-weight: 500;
-  border-bottom: 2px solid #2c53b0;
+  border-bottom: 2px solid #5942d0;
 }
 .table .nodata {
   padding: 20px;
