카카오 로그인 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,7 +52,7 @@
                                 <span class="form-title">SNS 로그인</span>
                                 <div class="btn-box">
                                     <button type="button" class="check-btn naver" onclick="onNaverLogin()">네이버 간편 로그인</button>
-                                    <button type="button" class="check-btn kakao">카카오 간편 로그인</button>
+                                    <button type="button" class="check-btn kakao" onclick="onKakaoLogin()">카카오 간편 로그인</button>
                                     <p class="login-caution">
                                         SNS로그인을 사용하시려면 회원가입이 필수이며, <em class="em-pink">최초 1회 계정인증</em>이 필요합니다
                                     </p>
@@ -105,7 +105,12 @@
         const naverAuthUrl = `https://nid.naver.com/oauth2.0/authorize?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&state=${state}`;
 
         window.location.href = naverAuthUrl;
-    }
+        }
+
+        function onKakaoLogin() {
+        // 서버에서 로그인 리다이렉션을 처리
+        window.location.href = '/oauth/kakao/login';
+        }
     </script>
 </body>
 </html>
